# LinearForge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  glad.c  main.cpp
include/: Camera.hpp  Component.hpp  Engine.hpp  Entity.hpp  HotReloader.hpp  InputComponent.hpp  LightComponent.hpp  MaterialComponent.hpp  Matrix4.h  Mesh.hpp  MeshLibrary.hpp  PrimitiveMeshes.hpp  RenderComponent.hpp  Scene.hpp  SceneLoader.hpp  Shader.hpp  TransformComponent.h  Vector3.h
include/glad/: glad.h
scenes/: main.json
shaders/: fragment.glsl  vertex.glsl
src/: Engine.cpp  Mesh.cpp  Shader.cpp
src/systems/: CameraSystem.hpp  InputSystem.hpp  LightSystem.hpp  RenderSystem.hpp  TransformSystem.hpp
